[package]
name = "awesome-cloud"
version = "0.0.1"
authors = ["Jeremy Chone <jeremy.chone@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Rust CLI to create Awesome Rust and Kubernetes Based Cloud Applications."
categories = ["web-programming", "command-line-utilities", "config"]
edition = "2021"
homepage = "https://github.com/jeremychone/rust-awesome-cloud.git"
repository = "https://github.com/jeremychone/rust-awesome-cloud.git"

[dependencies]